tre diverse soluzioni

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <img src="img/white_lamp.png" alt="lampadina-spenta" class="w-25">
-    <button>Accendi</button>
+    <img src="img/white_lamp.png" id="immagine" class="w-25">
+    <button id="tasto">Accendi</button>
     <script src="script.js"></script>
 </body>
 </html>
