--- a/soluzione 3/index.html
+++ b/soluzione 3/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <img src="img/white_lamp.png" id="immagine" class="w-25">
+    <img src="/img/white_lamp.png" id="immagine" class="w-25">
     <button id="tasto">Accendi</button>
     <script src="script.js"></script>
 </body>
